--- a/mcinterfaceneoforge1211/settings.gradle
+++ b/mcinterfaceneoforge1211/settings.gradle
@@ -1,2 +1,3 @@
-include ":mccore"
+rootProject.name = "mcinterfaceneoforge1211"
+include("mccore")
 project(":mccore").projectDir = file("../mccore")
